--- a/templates/index.html
+++ b/templates/index.html
@@ -1,9 +1,4 @@
-<!DOCTYPE HTML>
-<html lang="en">
-<head>
-<meta charset="utf-8">
-
-<title>{{ sitetitle }}</title>
+{% include 'header.html' %}
 <link rel="stylesheet" href="media/css/main.css" type="text/css"/>
 <link rel="stylesheet" href="media/css/header.css" type="text/css"/>
 <script  type="text/javascript"  src="media/js/jquery.js"></script>
