--- a/templates/upload.html
+++ b/templates/upload.html
@@ -1,8 +1,4 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<meta charset=UTF-8">
-		<title>{{ sitetitle }}</title>
+{% include 'header.html' %}
 		<link rel="stylesheet" href="http://localhost/media/css/main.css">
 		<link rel="stylesheet" href="http://localhost/media/css/header.css">
 		<link rel="stylesheet" href="http://localhost/media/css/upload.css">
