css js static fixd

--- a/templates/upload.html
+++ b/templates/upload.html
@@ -1,9 +1,7 @@
 {% include 'header.html' %}
-		<link rel="stylesheet" href="http://localhost/media/css/main.css">
-		<link rel="stylesheet" href="http://localhost/media/css/header.css">
-		<link rel="stylesheet" href="http://localhost/media/css/upload.css">
-		<script type="text/javascript" src="http://localhost/media/js/jquery.js"></script>
-		<script type="text/javascript" src="http://localhost/media/js/bannerdraw.js"></script>
+
+		<link rel="stylesheet" href="/static/css/upload.css">
+
 
 	</head>
 	<body>
