--- a/templates/header.html
+++ b/templates/header.html
@@ -3,3 +3,7 @@
 <head>
 <meta charset=UTF-8">
 <title>{{ sitetitle }}</title>
+<link rel="stylesheet" href="/static/css/main.css" type="text/css"/>
+<link rel="stylesheet" href="/static/css/header.css" type="text/css"/>
+<script  type="text/javascript"  src="/static/js/jquery.js"></script>
+<script  type="text/javascript"  src="/static/js/bannerdraw.js"></script>
