--- a/templates/nav.html
+++ b/templates/nav.html
@@ -3,15 +3,15 @@
 <aside id="nav">
 
 <aside id="nav1" class="nav">
-<h1 id="about" class="navtext"><a href="about.html">About</a></h1>
+<h1 id="about" class="navtext"><a href="/about">About</a></h1>
 </aside>
 <aside id="nav2" class="nav">
-<h1 id="about" class="navtext"><a href="top.html">Top</a></h1>
+<h1 id="about" class="navtext"><a href="/top">Top</a></h1>
 </aside>
 <aside id="nav3" class="nav">
-<h1 id="about" class="navtext"><a href="rate.html">Rate</a></h1>
+<h1 id="about" class="navtext"><a href="/rate">Rate</a></h1>
 </aside>
 <aside id="nav4" class="nav">
-<h1 id="about" class="navtext"><a href="info.html">Info</a></h1>
+<h1 id="about" class="navtext"><a href="/info">Info</a></h1>
 </aside>
 </aside>
