--- a/templates/upload.html
+++ b/templates/upload.html
@@ -25,7 +25,7 @@
 				<p>Photo:</p>
 			</aside>
 			<aside id="nameform">
-				<form action="/upload" enctype="multipart/form-data" method="post">
+				<form action="/upload/" enctype="multipart/form-data" method="post">
 				<input name="girlname" class="textinput" type="text">
 				<input name="description" class="textinput" type="text">
 				<input name="image" multiple="multiple" class="choosefile" type="file">
