--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,7 @@
 <body>
 
 <aside id="vote" >
-<h1 id="votetext" class="text"><a href="vote.html">Vote</a></h1>
+<h1 id="votetext" class="text"><a href="/vote">Vote</a></h1>
 </aside>
 <aside id="upload" >
 <h1 id="uploadtext" class="text"><a href="/upload">Upload</a></h1>
