--- a/templates/vote.html
+++ b/templates/vote.html
@@ -1,5 +1,12 @@
 {% include 'header.html' %}
 <link rel="stylesheet" href="/static/css/vote.css">
+<script type="text/javascript">
+function alart(){
+	
+	alert('hello thank you for choose me');
+	
+	}
+</script>
 </head>
 <header id="banner" class="body">
 <aside id="banner2">
@@ -13,7 +20,7 @@
 <body>
 
 <aside id="girlA" class="pic">
-<a href="#"><img src="/media/image/{{ girlA }}"  alt="girl"  height="100%"  id="girlApic" class="pic"/></a>
+<a href="#" onclick="alart();" ><img src="/media/image/{{ girlA }}"  alt="girl"  height="100%"  id="girlApic" class="pic" /></a>
 </aside>
 <aside id="girlB" class="pic">
 <a href="#"><img src="/media/image/{{ girlB }}"  alt="girl"  height="100%"  id="girlBpic" class="pic"/></a>
