--- a/templates/vote.html
+++ b/templates/vote.html
@@ -23,7 +23,7 @@ function alart(){
 <a href="#" onclick="alart();" ><img src="/media/image/{{ girlA }}"  alt="girl"  height="100%"  id="girlApic" class="pic" /></a>
 </aside>
 <aside id="girlB" class="pic">
-<a href="#"><img src="/media/image/{{ girlB }}"  alt="girl"  height="100%"  id="girlBpic" class="pic"/></a>
+<a href="#" onclick="alart();" ><img src="/media/image/{{ girlB }}"  alt="girl"  height="100%"  id="girlBpic" class="pic"/></a>
 </aside>
 
 
