--- a/static/css/vote.css
+++ b/static/css/vote.css
@@ -23,8 +23,6 @@ z-index:10;
 border-radius: 20px;
 width: 200px;
 height: 300px;
-
-
 position:relative;
 top:-200px;
 left:200px;
@@ -65,7 +63,7 @@ text-align:left;
 
 }
 
-.pic {
+img {
 border-radius: 20px;
 box-shadow: 0px 0px 20px #888888;
 }
