memcached and new in datacount

--- a/templates/vote.html
+++ b/templates/vote.html
@@ -11,7 +11,7 @@ function alart1(){
 function alart2(){
 	
 	
-	girlaforma.submit();
+	girlaformb.submit();
 	alert('Hello thanks a lot for choosing me ^^');
 	
 	
