--- a/templates/index.html
+++ b/templates/index.html
@@ -1,28 +1,17 @@
 {% include 'header.html' %}
 
 </head>
-<header id="banner" class="body">
-<aside id="banner2">
 
-<h1 id="titletext"><a href="/">{{ headname }}</a></h1>
-</aside>
-<aside id="banner3" class="banner3">
-<h1 class="bar3text">Jnmc</h1>
-</aside>
-</header>
-<body>
-
-<aside id="vote" >
+{% include 'topbar.html' %}
+<div id = "bigbong">
+<div id="vote" >
 <h1 id="votetext" class="text"><a href="/vote">Vote</a></h1>
-</aside>
-<aside id="upload" >
+</div>
+<div id="upload" >
 <h1 id="uploadtext" class="text"><a href="/upload">Upload</a></h1>
-</aside>
-
-
+</div>
 {% include 'nav.html'%}
-
- 
+</div>
 </body>
 
 
