--- a/templates/nav.html
+++ b/templates/nav.html
@@ -1,17 +1,17 @@
 
 
-<aside id="nav">
+<div id="nav">
 
-<aside id="nav1" class="nav">
+<div id="nav1" class="nav">
 <h1 id="about" class="navtext"><a href="/about">About</a></h1>
-</aside>
-<aside id="nav2" class="nav">
+</div>
+<div id="nav2" class="nav">
 <h1 id="about" class="navtext"><a href="/top">Top</a></h1>
-</aside>
-<aside id="nav3" class="nav">
+</div>
+<div id="nav3" class="nav">
 <h1 id="about" class="navtext"><a href="/rate">Rate</a></h1>
-</aside>
-<aside id="nav4" class="nav">
+</div>
+<div id="nav4" class="nav">
 <h1 id="about" class="navtext"><a href="/info">Info</a></h1>
-</aside>
-</aside>
+</div>
+</div>
