--- a/templates/vote.html
+++ b/templates/vote.html
@@ -3,16 +3,16 @@
 <script type="text/javascript">
 function alart1(){
 	
+	alert('Thanks a lot for voting me ^^');
+	document.girlaforma.submit();
 
-	girlaforma.submit();
-	alert('Hello thanks a lot for choosing me ^^');
 	
 	}
 function alart2(){
 	
-	
-	girlaformb.submit();
-	alert('Hello thanks a lot for choosing me ^^');
+	alert('Thanks a lot for voting me ^^');
+	document.girlaformb.submit();
+
 	
 	
 	}
@@ -21,22 +21,25 @@ function alart2(){
 {% include 'topbar.html' %}
 
 <div id = "bigbong">
+
 <div id="girlA">
-<img src="/media/image/{{ girlA }}"  alt="girla"  height="90%"  id="girlpic"  onclick= "alart1() "  >
+<img src="/media/image/{{ girlA }}"  alt="girla"  height="90%"  id="girlpic"  onclick= "alart1();">
 <form NAME= "girlaforma" action="/vote/" enctype="multipart/form-data" method="post">
 <input name="fileid" value = "{{ file }}" type="image" style= "visibility:hidden ">
 </form>
 </div>
+
 <div id="girlB">
-<img src="/media/image/{{ girlB }}"  alt="girlb"  height="90%"  id="girlpic"  onclick= "alart2()"  > 
+
+<img src="/media/image/{{ girlB }}"  alt="girlb"  height="90%"  id="girlpic"  onclick= "alart2();"> 
 <form NAME= "girlaformb" action="/vote/" enctype="multipart/form-data" method="post">
 <input name="fileid2" value = "{{ file2 }}" type="image" style= "visibility:hidden "> 
 </form>
+
 </div>
 
 
 {% include 'nav.html'%}
-
 </div> 
 </body>
 </html>
