--- a/templates/about.html
+++ b/templates/about.html
@@ -10,9 +10,14 @@
 
 <div id="upload">
 <div id="uploadform">
-<a href="/vote"><img src="/media/image/{{ done }}"  alt="done"  height="100%" class="pic"></a>
-
-<p id = "uploadedtext"><a href="/vote">OK we get it</a></p>
+<h5>This is a project made for </h5>
+<h5>Beauty Contest</h5>
+<h5>Powered by </h5>
+<h5>Django and HTML5 CSS3</h5>
+<h5>Any Way</h5>
+<h5>Have Fun With It</h5>
+<h1>AND</h1>
+<h1>Xmas</h1>
 
 </div>
 </div>
