--- a/static/css/main.css
+++ b/static/css/main.css
@@ -11,10 +11,11 @@ margin:0 auto;
 -webkit-transition: all 0.2s ease 0s;
 transition: all 0.2s ease 0s;
 
+
 }
 body {
 
-height:768px;
+
 background:url(background.png);
 background-size:100%;
 background-repeat:no-repeat;
@@ -23,7 +24,8 @@ background-position:center center;
 #bigbong{
 position:relative;
 top:10px;
-
+height:600px;
+overflow:hidden;
 }
 #about{
 text-align:center;
@@ -156,6 +158,7 @@ left:-20px;
 bottom:120px;
 text-align:left;
 width:100px;
+height:400px;
 
 }
 #nav1{ 
