upload improve and delete unacceptable file

--- a/templates/header.html
+++ b/templates/header.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset=UTF-8">
-<title>{{ sitetitle }}</title>
+<title>Miss Beauty</title>
 <link rel="stylesheet" href="/static/css/main.css" type="text/css"/>
 <script  type="text/javascript"  src="/static/js/jquery.js"></script>
 <script  type="text/javascript"  src="/static/js/bannerdraw.js"></script>
