--- a/templates/topbar.html
+++ b/templates/topbar.html
@@ -2,7 +2,7 @@
 <div id = "topcup">
 <div id="banner">
 <div id="banner2">
-<h1 id="titletext"><a href="/">{{ headname }}</a></h1>
+<h1 id="titletext"><a href="/">Miss Beauty</a></h1>
 </div>
 </div>
 <div id="banner3" class="banner3">
